# leviathan-ui

./: .gitignore  .storedetail  CHANGELOG.md  FAQ.md  LICENSE  README.md  RELEASE_NOTES.md  details.xml  leviathan-ui.py  lvthnUI.dialogBox.py  lvthnUi.ghost.py  lvthnUi.ghostBlur.py  lvthnUi.polished.py  pyproject.toml  release.bat  release.md  version.res
.github/workflows/: release.yml
app/: .app-container
assets/: .assets-container
config/: .config-container
docs/: .docs-container  dev-community-post.md  faq.md  index.html  index.md  overview.md
installer_classes/: __init__.py  finish_page.py  i18n_manager.py  install_page.py  install_worker.py  leviathan_setup.py  options_page.py  single_instance_checker.py  utils.py  welcome_page.py
lang/: de-DE.lv-lng  es-AR.lv-lng  fr-FR.lv-lng  pt-BR.lv-lng  zh-CN.lv-lng
leviathan_ui/: Script.py  __init__.py  cli.py  debug.py  dialogs.py  fixLights.py  inmojiTrx.py  lightsOff.py  progress_bar.py  splash.py  title_bar.py  touchscreen.py  wipeWindow.py
source/: .source-container
