[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leviathan-ui"
version = "1.0.5"
description = "Premium UI framework for PyQt6 with Windows 11 aesthetics, blur effects, i18n support, wheel packaging and modern developer documentation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Jesus Quijada", email = "jesusquijada.gh34@gmail.com"}
]
keywords = ["pyqt6", "ui", "windows11", "blur", "splash", "frameless", "modern-ui", "i18n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/JesusQuijada34/leviathan-ui"
Documentation = "https://github.com/JesusQuijada34/leviathan-ui#readme"
Repository = "https://github.com/JesusQuijada34/leviathan-ui"
Issues = "https://github.com/JesusQuijada/leviathan-ui/issues"

[tool.setuptools]
packages = ["leviathan_ui", "installer_classes"]

[tool.setuptools.package-data]
"*" = ["lang/*.lv-lng", "assets/*.svg", "app/*.ico", "assets/*.png"]

[project.scripts]
leviathan-ui = "leviathan_ui.cli:main"

[project.optional-dependencies]
dev = ["pytest", "black", "flake8", "mypy"]
build = ["pyinstaller", "twine", "build"]

